--- a/sa/templates/account/login.html
+++ b/sa/templates/account/login.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load my_tags %}
 {% load i18n %}
 
 {% load account socialaccount %}
@@ -8,31 +7,6 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
@@ -42,23 +16,43 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
                 <div class="panel-body">
                     <form class="login sign-in-form" method="POST" action="{% url 'account_login' %}">
                         {% csrf_token %}
-                    <fieldset>
-                        {% for field in form %}
+                        <fieldset>
                             <div class="fieldWrapper form-group">
-                                {{ field.errors }}
-                                {{ field.label_tag }} {{ field|addcss:"form-control"}}
-                                {% if field.help_text %}
-                                    <p class="help">{{ field.help_text|safe }}</p>
-                                {% endif %}
+
+                                <input type="text" name="login" class="form-control" id="id_login" autofocus="autofocus" placeholder="아이디" required maxlength="150" />
+
                             </div>
-                        {% endfor %}
-                        {% if redirect_field_value %}
-                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                        {% endif %}
-                        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-                        <button class="primaryAction btn btn-block btn-success" type="submit">{% trans "Sign In" %}</button>
-                    </fieldset>
+
+                            <div class="fieldWrapper form-group">
+
+                                <input type="password" name="password" required class="form-control" id="id_password" placeholder="비밀번호" />
+
+                            </div>
+
+                            <div class="fieldWrapper checkbox">
+                                <label>
+                                    <input type="checkbox" name="remember" id="id_remember" value="Remember Me"/>아이디 기억하기
+                                </label>
+                            </div>
+                            <a href="/accounts/signup/">회원가입</a>
+                            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                            <button class="primaryAction btn btn-block btn-success" type="submit">{% trans "Sign In" %}</button>
+
+
+                        </fieldset>
                     </form>
+
+
+                    <div class="socialaccount_ballot">
+
+                        <div class="socialaccount_providers">
+                                <a title="Google" class="socialaccount_provider google"
+                                   href="/accounts/google/login/?process=login"><button class="btn-block btn btn-danger">Google계정으로 로그인</button></a>
+
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
