--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <title> Stock Analysis | {% block title %}{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
     <link href="{% static '/vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
