views.py, templates 수정

--- a/templates/buttons.html
+++ b/templates/buttons.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Buttons {% endblock title %}
 {% block content %}
 <div class="row">
