--- a/templates/icons.html
+++ b/templates/icons.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Icons {% endblock title %}
 {% block content %}
             <div class="row">
@@ -1588,4 +1588,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
