--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Notifications {% endblock title %}
 {% block content %}
             <div class="row">
@@ -144,4 +144,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
