--- a/templates/typography.html
+++ b/templates/typography.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Typography {% endblock title %}
 {% block content %}
             <div class="row">
@@ -234,4 +234,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
