--- a/templates/grid.html
+++ b/templates/grid.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Grid {% endblock title %}
 {% block content %}
             <div class="row">
@@ -304,4 +304,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
