--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Dashboard {% endblock title %}
 {% block content %}
             <div class="row">
@@ -541,4 +541,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
