--- a/templates/panels-wells.html
+++ b/templates/panels-wells.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Panels and Wells {% endblock title %}
 {% block content %}
             <div class="row">
@@ -326,4 +326,3 @@
             <!-- /.row -->
 
 {% endblock %}
-
