--- a/templates/tables.html
+++ b/templates/tables.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_site.html' %}
 {% block title %} Tables {% endblock title %}
 {% block content %}
             <div class="row">
@@ -735,4 +735,3 @@
             </div>
             <!-- /.row -->
 {% endblock %}
-
