--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static '/vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    
+    <link href="{% static '/form/bootstrap.min.css' %}" rel="stylesheet">
+
 
     <!-- MetisMenu CSS -->
     <link href="{% static '/vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
@@ -80,7 +83,7 @@
         <script src="{% static '/vendor/flot/jquery.flot.time.js' %}"></script>
         <script src="{% static '/vendor/flot-tooltip/jquery.flot.tooltip.min.js' %}"></script>
         <script src="{% static '/data/flot-data.js' %}"></script>
-
+        <script src="{% static '/form/angular.js' %}"></script>
     </body>
 
     </html>
