--- a/sa/templates/account/login.html
+++ b/sa/templates/account/login.html
@@ -3,7 +3,7 @@
 
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}로그인{% endblock %}
 
 {% block content %}
 
